<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_S7_Incoming" Id="{862cb88a-14de-41a7-a87d-b1546843f60f}">
    <Declaration><![CDATA[TYPE ST_S7_Incoming :
STRUCT
	by1 AT%I* 	: BYTE;
	b1 AT%I* 	: BOOL;
	b2 AT%I* 	: BOOL;
	b3 AT%I* 	: BOOL;
	b4 AT%I* 	: BOOL;
	w1 AT%I*	: DWORD;
	r1 AT%I*	: REAL;
	r2 AT%I*	: REAL;
	i1 AT%I*	: INT;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>