<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_S7_Info" Id="{9c40b01d-79c5-4f28-8b07-b0a242804994}">
    <Declaration><![CDATA[TYPE ST_S7_Info :
STRUCT
	eS7CommState AT%I* 	: BYTE;
	bS7Error AT%I* 		: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>