<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_S7_RequestHandling" Id="{888f6db6-5013-4bce-944c-6cb5baa9775c}">
    <Declaration><![CDATA[TYPE ST_S7_RequestHandling :
STRUCT
	bySendRequest AT%Q*		: BYTE;
	byReceiveCounter AT%I*	: BYTE;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>